@@ -29,7 +29,7 @@
       </ion-card-header>
       <ion-card-content>
         <p>{{coupon.description}}</p>
-        <ion-icon id="canjeo" name="download" style="color: #466c1d;" (click)="downloadCoupon(coupon.$key)"></ion-icon>
+        <ion-icon id="canjeo" name="download" style="color: #466c1d;" (click)="downloadCoupon(coupon)"></ion-icon>
       </ion-card-content>
     </ion-col>
   </ion-card>
